# Carla-OBS

./: .editorconfig  .kdev_include_paths  CMakeLists.txt  README.md  carla-bridge-wrapper.cpp  carla-bridge.cpp  carla-bridge.h  carla-bridge.hpp  carla-patchbay-wrapper.c  carla-plugin-wrapper.c  carla-wrapper.c  carla-wrapper.h  carla.c  carla.cpp  carla.kdev4  common.c  common.h  qtutils.cpp  qtutils.h
carla-lilv/: CMakeLists.txt
carla-plugin/: CMakeLists.txt
cmake/: carla-bridge-native.cmake  carla-discovery-native.cmake  jackbridge.cmake  legacy.cmake  lilv.cmake  rtmempool.cmake  water.cmake
cmake/macos/: Info.plist.in
unused/: CMakeLists.txt  carla-host-wrapper.c  code.cpp
